--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -429,14 +429,6 @@ pages = {331-339}
   publisher={Springer}
 }
 
-@article{laorden2012collective,
-  title={Collective classification for spam filtering},
-  author={Laorden, Carlos and Sanz, Borja and Santos, Igor and Gal{\'a}n-Garc{\'\i}a, Patxi and Bringas, Pablo G},
-  journal={Logic Journal of IGPL},
-  pages={jzs030},
-  year={2012},
-  publisher={Oxford Univ Press}
-}
 
 @inproceedings{ragavan1993complex,
   title={Complex concept acquisition through directed search and feature caching},
@@ -553,13 +545,12 @@ pages = {331-339}
 	organization={IEEE}
 }
 
-@inproceedings{davis2005view,
-	title={View Learning for Statistical Relational Learning: With an Application to Mammography.},
-	author={Davis, Jesse and Burnside, Elizabeth S and de Castro Dutra, In{\^e}s and Page, David and Ramakrishnan, Raghu and Costa, Vitor Santos and Shavlik, Jude W},
-	booktitle={IJCAI},
-	pages={677--683},
-	year={2005},
-	organization={Citeseer}
+@article{davis2005view,
+	title={17 Learning a New View of a Database: With an Application in Mammography},
+	author={Davis, Jesse and Burnside, Elizabeth and Dutra, In{\^e}s and Page, David and Ramakrishnan, Raghu and Shavlik, Jude and Costa, V{\i}tor Santos},
+	journal={STATISTICAL RELATIONAL LEARNING},
+	pages={477},
+	year={2007}
 }
 
 @inproceedings{gabrilovich2004textfull,
@@ -655,4 +646,45 @@ pages = {331-339}
 	author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
 	year={1984},
 	publisher={CRC press}
+}
+
+@inproceedings{finkel2005incorporating_full,
+	title={Incorporating non-local information into information extraction systems by gibbs sampling},
+	author={Finkel, Jenny Rose and Grenager, Trond and Manning, Christopher},
+	booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
+	pages={363--370},
+	year={2005},
+	organization={Association for Computational Linguistics}
+}
+
+@inproceedings{finkel2005incorporating,
+	title={Incorporating non-local information into information extraction systems by gibbs sampling},
+	author={Finkel, Jenny Rose and Grenager, Trond and Manning, Christopher},
+	booktitle={ACL '05},
+	pages={363--370},
+	year={2005},
+	organization={ACL}
+}
+
+@book{bird2009natural,
+	title={Natural language processing with Python},
+	author={Bird, Steven and Klein, Ewan and Loper, Edward},
+	year={2009},
+	publisher={" O'Reilly Media, Inc."}
+}
+
+@book{van1980new,
+	title={New models in probabilistic information retrieval},
+	author={Van Rijsbergen, Cornelis J and Robertson, Stephen Edward and Porter, Martin F},
+	year={1980},
+	publisher={Computer Laboratory, University of Cambridge}
+}
+
+@incollection{rao2013entity,
+	title={Entity linking: Finding extracted entities in a knowledge base},
+	author={Rao, Delip and McNamee, Paul and Dredze, Mark},
+	booktitle={Multi-source, Multilingual Information Extraction and Summarization},
+	pages={93--115},
+	year={2013},
+	publisher={Springer}
 }
